--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+app-footer {
+    grid-area: footer;
+    position: absolute;
+    bottom: 0;
+    height: 30px;
+    padding-top: 10px;
+    width: 100%;
+    text-align: center;
+  
+    color: aliceblue;
+    background-color: rgb(35, 78, 88);
+    border-top: 3px solid steelblue;
+    border-bottom: 3px solid steelblue;
+  }
+  app-header {
+      grid-area: footer;
+      position: absolute;
+      bottom: 1;
+      height: 30px;
+      padding-top: 10px;
+      width: 100%;
+      text-align: center;
+    
+      color: aliceblue;
+      background-color: rgb(35, 78, 88);
+      border-top: 3px solid steelblue;
+      border-bottom: 3px solid steelblue;
+    }
