created courses array

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,1 +1,1 @@
-<p>content works!</p>
+<p>make a grid and display my classes in like a for loop maybe >>use the angular tutorial page thats open rn its perfect</p>
